--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: api_communications
-description: A starting point for Dart libraries or applications.
+description: Una forma facil de consumir un API de Soluciones Nerus.
+
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/solunerus/api_communications
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -10,6 +11,7 @@ dependencies:
   flutter:
       sdk: flutter
   dio: ^4.0.6
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +19,7 @@ dev_dependencies:
   test: ^1.22.0
 
   flutter_lints: ^2.0.1
+
+flutter:
+  assets:
+    - /Users/developer/developer/code/flutter/environment/.env
