--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 # Avoid committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
-pubspec.lock
+# pubspec.lock
 
 # Miscellaneous
 *.class
