--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: api_communications
 description: Una forma facil de consumir un API de Soluciones Nerus.
 
 version: 1.0.0
-repository: https://github.com/solunerus/api_communications
+repository: https://github.com/solunerus/api_communications.git
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
