--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ version: 1.0.1
 repository: https://github.com/solunerus/api_communications.git
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: ">=2.19.1 <3.0.0"
 
 dependencies:
   flutter:
-      sdk: flutter
-  dio: ^4.0.6
+    sdk: flutter
+  dio: ^5.1.1
   # flutter_dotenv: ^5.0.2
 
 dev_dependencies:
