--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,23 @@
 name: api_communications
 description: Una forma facil de consumir un API de Soluciones Nerus.
 
-version: 1.0.2
+version: 1.0.3
 repository: https://github.com/solunerus/api_communications.git
 
 environment:
-  sdk: ">=2.19.1 <3.0.0"
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.3.3
-  # flutter_dotenv: ^5.0.2
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.22.0
 
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
 flutter:
   # assets:
